--- a/electron/src/styles/App.css
+++ b/electron/src/styles/App.css
@@ -1,10 +1,18 @@
 * {
   font-family: 'Roboto', sans-serif;
+
+  --background: #636e74;
+  --text: #eeeeee;
 }
 
 body,
 #app {
+  margin: 0px;
+  padding: 0px;
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  background: var(--background);
+  color: var(--text);
 }
