--- a/electron/src/pages/Home.css
+++ b/electron/src/pages/Home.css
@@ -16,8 +16,9 @@ input[type='text'] {
   background: none;
   border: 1px solid #ddd;
   border-radius: 8px;
-  padding: 4px;
+  padding: 10px;
   color: var(--text);
+  outline: 0;
 }
 
 input[type='text']::placeholder {
