--- a/electron/src/styles/Sidebar.css
+++ b/electron/src/styles/Sidebar.css
@@ -1,6 +1,7 @@
 #sidebar {
   background: #4d575c;
   padding: 10px;
+  max-width: 180px;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
@@ -38,6 +39,12 @@ li.sidebar > .msg {
   color: #bbb;
   font-style: italic;
   font-size: 12px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+li.sidebar.active {
+  background: #485055;
 }
 
 .sidebar.share {
